waf.tf
# resource "aws_wafv2_web_acl" "mywaf" {
#     name = "mywaf"
#     description = "To protect my web application"
#     scope = aws_cloudfront_distribution.mycloud.arn

#     default_action {
#       allow{}
#     }
#     rule {
#       name = "Rule-1"
#       priority = 1

#       override_action{
#         count{}

#       }
#       statement{
#         managed_rule_group_statement{
#             name        = "AWSManagedRulesCommonRuleSet"
#         vendor_name = "AWS"

#         excluded_rule{
#              name = "SizeRestrictions_QUERYSTRING"
#         }
        
#         excluded_rule {
#           name = "NoUserAgent_HEADER"
#         }
#         scope_down_statement {
#           geo_match_statement {
#             country_codes = ["US", "NL"]
#           }
               
#       }
#     }
#     }
#      visibility_config {
#       cloudwatch_metrics_enabled = false
#       metric_name                = "friendly-rule-metric-name"
#       sampled_requests_enabled   = false
#     }
#     }
#     visibility_config {
#     cloudwatch_metrics_enabled = false
#     metric_name                = "friendly-metric-name"
#     sampled_requests_enabled   = false
#   }

# }
